--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -27,13 +27,27 @@
     "devices": "Dispositivi",
     "placeholder": "./percorso-o-url"
   },
+  "google_climate_card": {
+    "name": "Nome Entità",
+    "entity": "Entità",
+    "theme": "Usa Material Expressive",
+    "increase_temp": "Aumento Temperatura (e.g. 0.5)",
+    "decrease_temp": "Diminuzione Temperatura (e.g. 0.5)",
+    "dual_icon": {
+      "default": "Usa Icona di default",
+      "options": "Usa doppia icona (Elemento acceso e spento)."
+    }
+  },
   "google_button_card": {
+    "name": "Nome Entità",
     "control_type": "Tipo di controllo",
     "type": {
       "generic": "Generico (Interruttore, Pulsante...)",
-      "thermometer": "Termometro"
+      "thermometer": "Termometro",
+      "scene": "Autonomazioni e scene"
     },
     "dual_icon": {
+      "default": "Usa Icona di default",
       "options": "Usa doppia icona (Elemento acceso e spento)."
     }
   }
