--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -25,7 +25,13 @@
     "climate_name": "Climatizzazione",
     "device": "Dispositivo",
     "devices": "Dispositivi",
-    "placeholder": "./percorso-o-url"
+    "placeholder": "./percorso-o-url",
+    "default": "Usa configurazione di default al Tap(Tap Singolo)",
+    "tap_type": "Seleziona il tipo di Tap (Tap Singolo, Hold Press, Double Tap)",
+    "single": "Tap Singolo",
+    "hold": "Tap a pressione",
+    "double": "Doppio Tap",
+    "web": "Usa Tap Singolo sul Browser (Su mobile il tap selezionato)"
   },
   "google_climate_card": {
     "name": "Nome Entità",
