feat(): Fix text on Google TV, fix text card, added new card options

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -54,7 +54,8 @@
       "generic": "Generic (Switch, Button...)",
       "thermometer": "Thermometer",
       "scene": "Autonomation and scene",
-      "media": "Google or Alexa Device"
+      "media": "Device such Google, Alexa...",
+      "other": "Altri dispositivi"
     },
     "dual_icon": {
       "default": "Use default icon",
