--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -12,7 +12,9 @@
     "heat": "Riscalda",
     "cool": "Raffresca",
     "playing": "Riproduzione",
-    "idle": "Cast"
+    "idle": "Cast",
+    "presence": "Movimento",
+    "off_presence": "Nessun movimento"
   },
   "google_dashboard_card": {
     "description": "Configura il percorso di navigazione quando una card viene cliccata.",
@@ -54,12 +56,18 @@
       "generic": "Generico (Interruttore, Pulsante...)",
       "thermometer": "Termometro",
       "scene": "Autonomazioni e scene",
-      "media": "Dispositivo Google, Alexa...",
-      "other": "Altri dispositivi"
+      "media": "Multimedia (Google, Alexa...)"
     },
     "dual_icon": {
       "default": "Usa Icona di default",
       "options": "Usa doppia icona (Elemento acceso e spento)."
+    },
+    "toggle": {
+      "title": "Attiva azioni automatiche",
+      "press": "Azione al clic",
+      "hold": "Azione alla pressione prolungata",
+      "click": "Clic singolo (Accensione/Spegnimento)",
+      "info": "Visualizza informazioni"
     }
   }
 }
