--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -74,5 +74,32 @@
       "click": "Single click (On/Off)",
       "info": "Show information"
     }
+  },
+  "google_control_card": {
+    "name": "Card Name",
+    "entity_card": "Use card as entity",
+    "entity": "Entity",
+    "dual_icon": {
+      "default": "Use Default Icon",
+      "options": "Use Dual Icon (On and Off states)."
+    },
+    "actions": {
+      "press": "Action on click",
+      "hold": "Action on long press",
+      "more_info": "More Info",
+      "toggle": "Toggle",
+      "navigate": "Navigate",
+      "url": "URL",
+      "none": "None",
+      "google_home": "Open Google Home",
+      "settings": "Open Settings"
+    }
+  },
+  "google_slider_card": {
+    "name": "Card Name",
+    "entity": "Entity to control",
+    "icon": "Custom icon (if left empty, changes automatically based on On/Off state)",
+    "percentage": "Display value as percentage",
+    "bold_text": "Bold style for the text"
   }
 }
