--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -101,5 +101,9 @@
     "icon": "Custom icon (if left empty, changes automatically based on On/Off state)",
     "percentage": "Display value as percentage",
     "bold_text": "Bold style for the text"
+  },
+  "google_lights_card": {
+    "on_text": "Text for Lights ON",
+    "off_text": "Text for Lights OFF"
   }
 }
