feat(): Icon Improvements, Material color on Control Card

--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -10,8 +10,8 @@
     "offline": "Offline",
     "auto": "Auto",
     "heat": "Riscalda",
-    "cool": "Deumidificatore",
-    "dry": "Raffresca",
+    "dry": "Deumidificatore",
+    "cool": "Raffresca",
     "fan": "Ventilazione",
     "playing": "Riproduzione",
     "idle": "Cast",
