--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -110,5 +110,11 @@
   "google_lights_card": {
     "on_text": "Testo per Luci Accese",
     "off_text": "Testo per Luci Spente"
+  },
+  "google_media_overlay": {
+    "media_card": {
+      "no_content": "Nessun contenuto in riproduzione"
+    },
+    "remote": "Apri il telecomando"
   }
 }
