--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -61,7 +61,8 @@
       "generic": "Generico (Interruttore, Pulsante...)",
       "thermometer": "Termometro",
       "scene": "Autonomazioni e scene",
-      "media": "Multimedia (Google, Alexa...)"
+      "media": "Multimedia (Google, Alexa...)",
+      "state": "Stato"
     },
     "dual_icon": {
       "default": "Usa Icona di default",
