feat(): fix temperature #5

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -5,6 +5,7 @@
     "show_warning": "Show Warning",
     "no_entity_set": "Entity not set",
     "no_entity": "Entity not available",
+    "indoor": "Indoor",
     "on": "On",
     "off": "Off",
     "offline": "Offline",
