--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -5,6 +5,7 @@
     "show_warning": "Mostra avviso",
     "no_entity_set": "Entità non impostata",
     "no_entity": "Entità non disponibile",
+    "indoor": "Interno",
     "on": "Acceso",
     "off": "Spento",
     "offline": "Offline",
