--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -79,7 +79,10 @@
       "press": "Action on click",
       "hold": "Action on long press",
       "click": "Single click (On/Off)",
-      "info": "Show information"
+      "info": "Show information",
+      "navigate": "Navigate",
+      "url": "URL",
+      "none": "None"
     }
   },
   "google_control_card": {
