feat(): Added Control Type Action

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -63,7 +63,9 @@
       "thermometer": "Thermometer",
       "scene": "Autonomation and scene",
       "media": "Multimedia (Google, Alexa...)",
-      "state": "State"
+      "state": "State",
+      "action": "Action",
+      "app_version": "Google Components Version"
     },
     "dual_icon": {
       "default": "Use default icon",
