--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -109,6 +109,11 @@
   },
   "google_slider_card": {
     "name": "Card Name",
+    "control_type": "Control Type",
+    "type": {
+      "light": "Light",
+      "cover": "Cover"
+    },
     "entity": "Entity to control",
     "icon": "Custom icon (if left empty, changes automatically based on On/Off state)",
     "percentage": "Display value as percentage",
