--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -19,7 +19,11 @@
     "presence": "Movimento",
     "off_presence": "Nessun movimento",
     "today_at": "Oggi alle",
-    "yesterday_at": "Ieri alle"
+    "yesterday_at": "Ieri alle",
+    "open": "Aperto",
+    "closed": "Chiuso",
+    "active": "Attivo",
+    "inactive": "Inattivo"
   },
   "google_dashboard_card": {
     "description": "Configura il percorso di navigazione quando una card viene cliccata.",
@@ -63,7 +67,8 @@
     "type": {
       "generic": "Generico (Interruttore, Pulsante...)",
       "thermometer": "Termometro",
-      "scene": "Autonomazioni e scene",
+      "automation": "Autonomazioni",
+      "scene": "Scene",
       "media": "Multimedia (Google, Alexa...)",
       "state": "Stato",
       "action": "Azioni",
