feat(): Updated colors and improvment

--- a/src/localize/languages/it.json
+++ b/src/localize/languages/it.json
@@ -66,7 +66,7 @@
     "control_type": "Tipo di controllo",
     "type": {
       "generic": "Generico (Interruttore, Pulsante...)",
-      "thermometer": "Termometro",
+      "thermometer": "Climatizzazione",
       "automation": "Autonomazioni",
       "scene": "Scene",
       "media": "Multimedia (Google, Alexa...)",
